Fix mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,7 @@
   body,
   #root {
     width: 100%;
+    max-width: 100%;
     min-height: 100%;
     margin: 0;
     overflow-x: hidden;
